--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metrics",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "./lib",
   "repository": "git://github.com/segmentio/metrics.git",
   "description": "Simple and pluggable metrics",
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "date-math": "0.0.1",
+    "date.js": "^0.2.0",
     "debug": "^0.7.4",
     "defaults": "^1.0.0",
     "lodash": "^2.4.1",
